# text-generation-webui

./: flake.nix  pyproject.toml
