[tool.poetry]
name = "text-generation-webui"
version = "0.1.0"
description = "A gradio web UI for running Large Language Models like LLaMA, llama.cpp, GPT-J, Pythia, OPT, and GALACTICA."
authors = ["oobabooga"]
license = "AGPL-3.0 license"
readme = "README.md"
packages = [{include = "text_generation_webui"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.18.0"
datasets = "^2.11.0"
flexgen = "0.1.7"
gradio = "3.25"
Markdown = "^3.4.3"
numpy = "^1.24.2"
Pillow = "9.4.0"
requests = "^2.28.2"
rwkv = "0.7.3"
safetensors = "0.3.0"
sentencepiece = "^0.1.98"
PyYAML = "^6.0"
tqdm = "^4.65.0"
peft = {git = "https://github.com/huggingface/peft"}
transformers = "4.28.0"
bitsandbytes = "0.38.1"
llama-cpp-python = "0.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
